--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,14 @@ input[type=file]{
     margin-top: 0%;
     margin-left: auto;
     margin-right: auto ;
+    margin: 0 auto;
     text-align: center;
 }
 
 .main {
     margin-left: auto;
     margin-right: auto;
-    margin-top:17%;
+    margin-top:19%;
     width: 22%;
     height: 0; 
     overflow: hidden; 
