--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,8 @@ input[type=file]{
 .main {
     margin-left: auto;
     margin-right: auto;
-    margin-top:19%;
-    width: 22%;
+    margin-top:205px;
+    width:300px;
     height: 0; 
     overflow: hidden; 
     transition: height 3s ease-out; 
